# gee-kfold

./: LICENSE  README.md  pyproject.toml
ee_kfold/: __init__.py
test/: test_set.py
