[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gee-kfold"
version = "0.0.1"
description = ""
authors = [{"name" = "Jesse Anderson <jesse.anderson@gmail.com>"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["ee_kfold"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
